packages/kyvernoPolicies/chart/tests/vpol/restrict-selinux-type-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-pod-level
spec:
  securityContext:
    seLinuxOptions:
      type: disallowed_t
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-container
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-pod-level-allowed-container-disallowed
spec:
  securityContext:
    seLinuxOptions:
      type: container_t
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-multiple-containers
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-initcontainer
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-type-ephemeral
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  ephemeralContainers:
  - name: debug01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-type-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baddeployment-type-container
  template:
    metadata:
      labels:
        app: baddeployment-type-container
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
        securityContext:
          seLinuxOptions:
            type: disallowed_t

###### Pods - Good
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-selinux
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-allowed-pod-level
spec:
  securityContext:
    seLinuxOptions:
      type: container_kvm_t
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-allowed-multiple-containers
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-allowed-all-container-types
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_t
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_init_t
  ephemeralContainers:
  - name: debug01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-allowed-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gooddeployment-allowed-container
  template:
    metadata:
      labels:
        app: gooddeployment-allowed-container
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
        securityContext:
          seLinuxOptions:
            type: container_t
