packages/kyvernoPolicies/chart/tests/vpol/restrict-selinux-type-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-selinux-type-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-selinux-type-cel
  resources:
  - badpod-type-pod-level
  - badpod-type-container
  - badpod-type-pod-level-allowed-container-disallowed
  - badpod-type-multiple-containers
  - badpod-type-initcontainer
  - badpod-type-ephemeral
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: restrict-selinux-type-cel
  resources:
  - baddeployment-type-container
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-selinux-type-cel
  resources:
  - goodpod-no-selinux
  - goodpod-allowed-pod-level
  - goodpod-allowed-multiple-containers
  - goodpod-allowed-all-container-types
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: restrict-selinux-type-cel
  resources:
  - gooddeployment-allowed-container
  result: pass
